--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
     "start": "node server.js",
     "dev": "node --watch server.js"
   },
-  "keywords": ["webrtc", "video-chat", "education", "webgl", "graphics"],
+  "keywords": [
+    "webrtc",
+    "video-chat",
+    "education",
+    "webgl",
+    "graphics"
+  ],
   "author": "Ken Perlin",
   "license": "MIT",
   "dependencies": {
+    "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
     "express": "^4.18.2",
     "ws": "^8.14.2"
   }
